--- a/style.css
+++ b/style.css
@@ -105,3 +105,13 @@ font-size: 20px;
 .links:hover{
 background-color: darkblue;
 }
+
+html{
+scroll-behavior: smooth;
+}
+a{
+text-decoration: none;
+}
+.article:hover{
+color: chartreuse;
+}
